--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/storymap.2.4.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Work+Sans&display=swap" rel="stylesheet">  <!--facebook icon-->
+   <link rel="stylesheet" type="text/css" href="css/storymap.2.4.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <style>
 #info1 {
