--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  <!--facebook icon-->
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Work+Sans&display=swap" rel="stylesheet">  <!--facebook icon-->
 </head>
 
 <body>
