--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Work+Sans&display=swap" rel="stylesheet">  <!--facebook icon-->
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
