--- a/index.html
+++ b/index.html
@@ -132,6 +132,49 @@
       <img class="img-fluid rounded" src="img/Logsden 001.jpg" alt="">
     </div>
   </div>
+<div class="container">
+  <div class="row">
+  <div class="col-lg-6">
+    <img class="img-fluid rounded" src="img/feed.jpg" alt="">
+  </div>
+  <div class="col-lg-6">
+    <h2>Feed Selection</h2>
+    <p>We have a variety of feed for livestock and pets. If we do not carry what you need or have a large order request, let us know and we can add it to our next order.</p>
+
+    <table>
+  <tr>
+    <th>Poultry: </th>
+    <th>Livestock:</th>
+    <th>Pets: </th>
+  </tr>
+  <tr>
+    <td>Cracked Corn </td>
+    <td>Providers Pellets</td>
+    <td>Bird (50# and 25#)</td>
+  </tr>
+  <tr>
+    <td>2 Grain Sceatch</td>
+    <td>Kountry Buffet</td>
+    <td>Dog (10, 25, and 50#)</td>
+  </tr>
+  <tr>
+    <td>25# Hatch to Hen</td>
+    <td>Dry Cob</td>
+    <td>Cat (#20)</td>
+  </tr>
+  <tr>
+    <td>All Purpose Crumbles</td>
+    <td>Web Cob</td>
+    <td>Pig </td>
+  </tr>
+  <tr>
+    <td>Layer Pellets 17%</td>
+    <td>Alfalfa Pellets</td>
+    <td>Rabbit Pellets</td>
+  </tr>
+</table>
+</div>
+</div>
 
   <!-- Page Content -->
 
