--- a/history.html
+++ b/history.html
@@ -61,7 +61,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
             <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a>
-            <a class="dropdown-item" href="blog-home-2.html">River Guide</a>
+            <a class="dropdown-item" href="rivermap.html">Shuttle Service 2</a>
             <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
           </div>
         </li>
