--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
   </div>
   <div class="col-lg-6">
     <h2>Feed Selection</h2>
-    <p>We have a variety of feed for livestock and pets. If we do not carry what you need or have a large order request, let us know and we can add it to our next order.</p>
+    <p>We have a variety of feed for livestock and pets. If we do not carry what you need or have a large order request, let us know and we can add it to our next order.
+    <br> We Take Special Orders!</p>
 
     <table>
   <tr>
