--- a/moonshine.html
+++ b/moonshine.html
@@ -55,7 +55,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="RiverShuttleService.html">River Shuttle Services</a>
-              <a class="dropdown-item" href="blog-home-2.html">River Guides</a>
+              <a class="dropdown-item" href="rivermap.html">Shuttle Services 2</a>
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
