--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -89,7 +89,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownservices">
               <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a>
-              <a class="dropdown-item" href="blog-home-2.html">River Guide</a>
+              <a class="dropdown-item" href="rivermap.html">Shuttle Services 2</a>
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
