--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
               Local Services
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a>
-              <a class="dropdown-item" href="blog-home-2.html">River Guide</a>
+                        <a class="dropdown-item" href="rivermap.html">Shuttle Service</a>    <!-- <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a> -->
+              <!-- <a class="dropdown-item" href="blog-home-2.html">River Guide</a> -->
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
