--- a/moonshine.html
+++ b/moonshine.html
@@ -54,8 +54,8 @@
               Local Services
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="RiverShuttleService.html">River Shuttle Services</a>
-              <a class="dropdown-item" href="rivermap.html">Shuttle Services 2</a>
+              <!-- <a class="dropdown-item" href="RiverShuttleService.html">River Shuttle Services</a> -->
+              <a class="dropdown-item" href="rivermap.html">Shuttle Service</a>
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
