--- a/rivermap.html
+++ b/rivermap.html
@@ -75,8 +75,8 @@
               Local Services
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a>
-              <a class="dropdown-item" href="rivermap.html">Shuttle Service 2</a>
+              <!-- <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a> -->
+              <a class="dropdown-item" href="rivermap.html">Shuttle Service</a>
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
@@ -245,10 +245,10 @@
     var map = L.map("mymap", {
       zoomControl: false,
       scrollWheelZoom: false
-    }).setView([44.757, -124.05], 10);
+    }).setView([44.757, -123.95], 12);
 
 
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw', {
+    L.tileLayer('https://api.mapbox.com/styles/v1/loweas/cjst6mi3c537k1ft6qwkumzwd/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibG93ZWFzIiwiYSI6ImNqczlhMzJqMjE1dDM0NG12dHBxam1lZjIifQ.Ox8goYypCr_cJCoDPgHTsQ', {
       id: 'mapbox.outdoors', detectRetina: true,
       maxZoom: 19
     }).addTo(map);
@@ -298,7 +298,7 @@
     }).setView([44.757, -124.0], 12.2);
 
 
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw', {
+    L.tileLayer('https://api.mapbox.com/styles/v1/loweas/cjst6mi3c537k1ft6qwkumzwd/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibG93ZWFzIiwiYSI6ImNqczlhMzJqMjE1dDM0NG12dHBxam1lZjIifQ.Ox8goYypCr_cJCoDPgHTsQ', {
       id: 'mapbox.outdoors', detectRetina: true,
       maxZoom: 19
     }).addTo(map2);
