--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
           <li class="nav-item">
             <a class="nav-link" href="history.html">History</a>
           </li>
-
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Local Services
@@ -110,10 +108,14 @@
   </header>
 <div class="container">
     <h1 class="my-4">Welcome to Logsden!</h1>
+    <h2> We have successfully stayed afloat during Covid-19! We mantain a 2 customer limit in the store at any given time. Please be respectful when coming to our small community and wear a mask!</h2>
+<br>
   <!-- Features Section -->
   <div class="row">
     <div class="col-lg-6">
+
       <h2>Logsden Country Store</h2>
+      <!-- <p> We have successfully stayed afloat during Covid-19! We have a two person at a time in the store policy. Please be respectful when coming to our small community and wear a mask!<p> -->
       <p>The Logsden Country Store is a community convenience store and post office nestled in the Siletz River valley.  The Coates family has owned and operated the business since 1952!</p>
     <p> In addition to groceries, the Logsden Store also provides conveniences such as gas, propane, beer, wine, including a wonderful selection of microbrews, a hot deli for folks on the run or fresh made deli sandwiches with homemade potato or pasta salads for those who can wait a few minutes. We are a licensing service for the Oregon Department of Fish and Wildlife and also carry a nice supply of bait and tackle.  For local farmers there is an array of feed for chickens, rabbits, cattle, and horses.</p>
       <p>The area is a sportsman’s playground where hunting and fishing abounds.  Lincoln County’s Moonshine Campground is just up the road and offers camping sites for tents and motor homes.</p>
