--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     </div>
   </header>
 <div class="container">
-    <h1 class="my-4">Welcome to Logsden!</h1>
+  <center>
+    <h1 class="my-4">Welcome to Logsden!</h1></center>
     <h2> We have successfully stayed afloat during Covid-19! We mantain a 2 customer limit in the store at any given time. Please be respectful when coming to our small community and wear a mask!</h2>
 <br>
   <!-- Features Section -->
@@ -132,7 +133,7 @@
   <div class="col-lg-6">
     <h2>Feed Selection</h2>
     <p>We have a variety of feed for livestock and pets. If we do not carry what you need or have a large order request, let us know and we can add it to our next order.
-    <br> We Take Special Orders!</p>
+    </p>
 
     <table>
   <tr>
@@ -171,7 +172,7 @@
 
   <!-- Page Content -->
 
-
+<br>
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
