--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="img/sue.jpeg" alt="">
           <div class="card-body">
             <h4 class="card-title">Sue </h4>
             <h6 class="card-subtitle mb-2 text-muted">Deli Artiste</h6>
@@ -152,6 +152,19 @@
             <h4 class="card-title">Tesha Socha </h4>
             <h6 class="card-subtitle mb-2 text-muted">The Entrepreneur</h6>
             <p class="card-text">Tesha is our local Shuttle Lady and also can be seen working evenings.</p>
+          </div>
+          <div class="card-footer">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100 text-center">
+          <img class="card-img-top" src="img/sammie.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Sammie Paul </h4>
+            <h6 class="card-subtitle mb-2 text-muted">Our own April Ludgate</h6>
+            <p class="card-text">Sammie is our newest member of our team! </p>
           </div>
           <div class="card-footer">
 
